--- a/css/Globe.css
+++ b/css/Globe.css
@@ -1,21 +1,3 @@
-.site {
-    height: 100vh;
-}
-.sky{
-    background-color: black;
-    height: 100vh;  
-    z-index: 1;
-}
-.earth{
-    background-color: aqua;
-    height: 40vh;
-    z-index: 2;
-}
-.santa {
-    background-color: red;
-    height: 10%;
-    z-index: 3;
-}
 /* Starry Backrgound*/
 
 .stars, .shimmer{ 
@@ -51,4 +33,13 @@
     to{
         background-position: -10000px 5000px;
     }
+}
+
+/*Earth's map*/
+
+.earth{
+ background-color: white;
+ z-index: 3;
+ left: 50%;
+ top: 50%;
 }
