--- a/css/Globe.css
+++ b/css/Globe.css
@@ -1,3 +1,10 @@
+body{
+    margin: 0%;
+    padding: 0%;
+    height: 100vh;
+    width: 100vw;
+}
+
 /* Starry Backrgound*/
 
 .stars, .shimmer{ 
@@ -6,8 +13,8 @@
     bottom: 0; 
     left: 0;
     right: 0;
-    width: 100%; 
-    height: 100%; 
+    width: 100vw; 
+    height: 100vh; 
     display: block; 
 }
 
@@ -35,14 +42,17 @@
     }
 }
 
-/*Earth's map*/
+/*Earth's map
 
-#earth{
+    Unfinished, do not touch or change
+*/
+
+#earth-section{
     position: absolute;
     background-color: white;
     z-index: 3;
     left: 50%;
-    top: 89.3%;
+    top: 85%;
     height: 100px;
-    width: 100px;
+    width: 100px;  
 }
