--- a/css/LEGO-City.css
+++ b/css/LEGO-City.css
@@ -1,19 +1,7 @@
-input[type=checkbox] {
-	position: absolute;
-	top: -9999px;
-	left: -9999px;
+.to-be-changed {
+	color: black;
 }
 
-label {
-	display: block;
-	background: #08C;
-	padding: 5px;
-	border: 1px solid rgba(0,0,0,.1);
-	border-radius: 2px;
-	color: white;
-	font-weight: bold;
-}
-
-input[type=checkbox]:checked ~ .to-be-changed {
+.to-be-changed:target {
 	color: red;
 }
