--- a/css/Globe.css
+++ b/css/Globe.css
@@ -1,9 +1,3 @@
-body{
-    margin: 0%;
-    padding: 0%;
-    height: 100vh;
-    width: 100vw;
-}
 
 /* Starry Backrgound*/
 
@@ -42,7 +36,7 @@ body{
     }
 }
 
-/* Earth's map */
+/* Worldmap */
 
 #earth-div{
     z-index: 3; 
