--- a/css/Startside.css
+++ b/css/Startside.css
@@ -1,8 +1,16 @@
 .frame {background-color: black;
-width: 100vw;}
+width: 100vw;
+height: 100vh;}
 
 .ground {
     width: 100vw;
     height: 100vh;
-    position: relative;
+    position: absolute;
+}
+.road{
+    height: 55vh;
+    position: absolute;
+    bottom: 0%;
+    left: 35%;
+    z-index: 10;
 }
