--- a/css/Globe.css
+++ b/css/Globe.css
@@ -67,3 +67,18 @@
     }
 }
 /*-----------------------------------------------------------------*/
+
+/*Santa's Sleigh --------------------------------------------------*/
+
+#santa-sleigh{
+    position: fixed;
+    z-index: 3;
+    background-color: white;
+    width: 600px;
+    height: 100vh;
+    left: 35%;
+    top: 75%;
+    border-radius: 20%;
+}
+
+/*-----------------------------------------------------------------*/
