--- a/css/Globe.css
+++ b/css/Globe.css
@@ -69,10 +69,11 @@
 /*-----------------------------------------------------------------*/
 
 /*Santa's Sleigh --------------------------------------------------*/
+
 #santa-sleigh{
     position: fixed;
     z-index: 3;
-    background-color: white;
+    background-color: darkred;
     width: 600px;
     height: 100vh;
     left: 35%;
@@ -83,7 +84,7 @@
 #sleigh-rim{
     position: fixed;
     z-index: 3;
-    background-color: red;
+    background-color: #442e19;
     width: 600px;
     height: 150vh;
     left: 35%;
