--- a/css/Startside.css
+++ b/css/Startside.css
@@ -76,11 +76,15 @@ height: 100vh;}
 
 }
 
-
-
-
-
-
+#tree1 {
+    left: 0%;
+    bottom: 50%;
+}
+#tree2 {}
+#tree3 {}
+#tree4 {}
+#tree5 {}
+#tree6 {}
 
 
 
