background moved to felles

--- a/CSS/Felles.css
+++ b/CSS/Felles.css
@@ -40,4 +40,20 @@ body{
         background-position: -10000px 5000px;
     }
 }
+
+.moon img{
+    position: absolute;
+    z-index: 3;
+    width: 10vw;
+    right: 5%;
+    top: 0;
+    animation: moonBob 2s linear infinite;
+}
+
+@keyframes moonBob {
+    0% {top: 0;}
+    50%{ top: 1%;}
+    100% {top: 0;}
+    
+}
 /*----------------------------------------------------------------*/
