--- a/css/LEGO-City.css
+++ b/css/LEGO-City.css
@@ -12,8 +12,8 @@ body{
 z-index: 3;
 position: relative;
 justify-content: center;
-top: 2500px;
-right: 2000px;
+bottom: 0%;
+right: 20%;
 width:150vw;
 height: 40vh;
 }
