--- a/css/LEGO-City.css
+++ b/css/LEGO-City.css
@@ -5,6 +5,8 @@ body{
 
 #container {
 	position: relative;
+	height: 100vh;
+	width: 100vw;
 }
 
 
@@ -12,7 +14,7 @@ body{
 z-index: 3;
 position: relative;
 justify-content: center;
-bottom: 0%;
+top: 70%;
 right: 20%;
 width:150vw;
 height: 40vh;
