--- a/css/Globe.css
+++ b/css/Globe.css
@@ -47,7 +47,7 @@
 #sleigh-shadow{
     position: fixed;
     z-index: 1;
-    background-color: black;
+    background-color: #101010;
     width: 600px;
     height: 150vh;
     left: 35%;
@@ -66,7 +66,7 @@
     border-radius: 20%;
 }
 
-#santa-leg-right{
+#santa-legs{
     position: absolute;
     z-index: 4;
     background-color: white;
