--- a/css/LEGO-City.css
+++ b/css/LEGO-City.css
@@ -14,8 +14,17 @@ body{
 z-index: 3;
 position: relative;
 justify-content: center;
-top: 70%;
+top: 65%;
 right: 20%;
 width:150vw;
 height: 40vh;
 }
+#bilde2 {
+	z-index: 3;
+	position: relative;
+	justify-content: center;
+	top: 15%;
+	right: 20%;
+	width:150vw;
+	height: 10vh;
+	}
