--- a/css/Globe.css
+++ b/css/Globe.css
@@ -77,6 +77,11 @@
     width: 500px;
     height: 500px; 
 }
+
+#santa-arms{
+    
+}
+
 /*-----------------------------------------------------------------*/
 
 /*Always has been meme*/
