--- a/CSS/Felles.css
+++ b/CSS/Felles.css
@@ -8,6 +8,7 @@ body{
 /*Starry Backrgound ------------------------------------------*/
 .stars, .shimmer{ 
     position: absolute; 
+    z-index: -1;
     top: 0;
     bottom: 0; 
     left: 0;
