--- a/css/LEGO-City.css
+++ b/css/LEGO-City.css
@@ -19,7 +19,7 @@ right: 20%;
 width:150vw;
 height: 40vh;
 }
-#bilde2 {
+/*#bilde2 {
 	z-index: 3;
 	position: relative;
 	justify-content: center;
@@ -27,4 +27,14 @@ height: 40vh;
 	right: 20%;
 	width:150vw;
 	height: 10vh;
+	}*/
+#bilde3 {
+	z-index: 3;
+	position: relative;
+	justify-content: center;
+	top: -105%;
+	right: 4%;
+	width:115vw;
+	height: 115vh;
 	}
+
