--- a/css/LEGO-City.css
+++ b/css/LEGO-City.css
@@ -12,29 +12,29 @@ body{
 
 #bilde {
 z-index: 3;
-position: relative;
+position: absolute;
 justify-content: center;
 top: 65%;
-right: 20%;
+left: -20%;
 width:150vw;
 height: 40vh;
 }
-/*#bilde2 {
-	z-index: 3;
-	position: relative;
+#bilde2 {
+	z-index: 4;
+	position: absolute;
 	justify-content: center;
-	top: 15%;
-	right: 20%;
-	width:150vw;
-	height: 10vh;
-	}*/
+	top: -20%;
+	right: 26.2%;
+	width:20vw;
+	height: 85vh;
+	}
 #bilde3 {
 	z-index: 3;
-	position: relative;
+	position: absolute;
 	justify-content: center;
-	top: -105%;
-	right: 4%;
-	width:115vw;
-	height: 115vh;
+	top: 5%;
+	right: 42%;
+	width:60vw;
+	height: 60vh;
 	}
 
