--- a/css/Lego-Land.css
+++ b/css/Lego-Land.css
@@ -1,3 +1,7 @@
+body{
+    overflow: hidden;
+}
+
 .container{
     position: relative;
     display: flex;
@@ -5,11 +9,10 @@
     height: 100%;
 }
 
-
+/*Styling for sky and snow backround*/
 .skyContainer{
     position: absolute;
     left: 0;
-
 }
 
 .sky{
@@ -23,13 +26,13 @@
     left: 0;
     z-index: 1;
     display: flex;
-
 }
 
 .snow{
     width: 20%;
 }
 
+/*Styling for castle*/
 .castleContainer{
     position: absolute;
     z-index: 2;
@@ -37,21 +40,56 @@
     top: 20%;
 }
 
-.windowContainer{
+.castleTriangle{
     position: absolute;
-    top: 25%;
+    top: 11%;
+    left: 35.5%;
+    z-index: 2;
+    width: 30%;
+    height: 10%;
+}
+
+/*Styling for castle Windows*/
+.windowContainer, .windowContainerBottom{
+    position: absolute;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    width: 61%; 
-    
+    width: 61%;
+}
+
+.windowContainer{
+    top: 25%;
+}
+
+.windowContainerBottom{
+    top: 65%;
 }
 
 .window{
     z-index: 3;
     width: 7%;
+    padding: .5%;
 }
 
+/*Styling for castle door*/
+.doorContainer{
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    z-index: 3;
+    bottom: 17.5%;
+}
+
+.door{
+    width: 25%;
+}
+
+#door2{
+    transform: scaleX(-1);
+}
+
+/*Styling for trees*/
 .tree{
     position: absolute;
     z-index: 2;
@@ -82,6 +120,7 @@
     bottom: 0;
 }
 
+/*Styling for clouds*/
 .cloud{
     position: absolute;
     z-index: 1;
