--- a/css/North-Pole.css
+++ b/css/North-Pole.css
@@ -203,3 +203,12 @@
     height: 40%;
     z-index: 3;
 }
+
+#giftbag{
+    position: absolute;
+    bottom: 12%;
+    right: 15.5%;
+    z-index: 2;
+    height:30%;
+    
+}
