--- a/css/North-Pole.css
+++ b/css/North-Pole.css
@@ -212,3 +212,35 @@
     height:30%;
     
 }
+
+#helper1{
+    position: absolute;
+    bottom: 25%;
+    right: 9%;
+    z-index: 2;
+    height:8%;
+}
+
+#helper2{
+    position: absolute;
+    bottom: 28%;
+    right: 17.5%;
+    z-index: 2;
+    height:10%;
+
+}
+#helper3{
+    position: absolute;
+    bottom: 30%;
+    right: 15.5%;
+    z-index: 1;
+    height:7%;
+}
+
+#cottage{
+    position: absolute;
+    bottom: 20%;
+    right: 65.5%;
+    z-index: 3;
+    height:30%;
+}
