--- a/css/LEGO-City.css
+++ b/css/LEGO-City.css
@@ -13,7 +13,7 @@ body{
 #bilde {
 z-index: 3;
 position: absolute;
-justify-content: center;
+/*justify-content: center;*/
 top: 65%;
 left: -20%;
 width:150vw;
@@ -22,7 +22,7 @@ height: 40vh;
 #bilde2 {
 	z-index: 4;
 	position: absolute;
-	justify-content: center;
+	/*justify-content: center;*/
 	top: -20%;
 	right: 26.2%;
 	width:20vw;
@@ -31,7 +31,7 @@ height: 40vh;
 #bilde3 {
 	z-index: 3;
 	position: absolute;
-	justify-content: center;
+	/*justify-content: center;*/
 	top: 5%;
 	right: 42%;
 	width:60vw;
