--- a/css/LEGO-City.css
+++ b/css/LEGO-City.css
@@ -8,13 +8,19 @@ body{
 	height: 100vh;
 	width: 100vw;
 }
+#nightsky{
+	position: relative;
+}
 
-
+#by{
+	position: relative;
+}
 #bilde {
 z-index: 3;
 position: absolute;
-/*justify-content: center;*/
-top: 65%;
+display: flex;
+justify-content: center;
+top: 64.7%;
 left: -20%;
 width:150vw;
 height: 40vh;
@@ -22,7 +28,8 @@ height: 40vh;
 #bilde2 {
 	z-index: 4;
 	position: absolute;
-	/*justify-content: center;*/
+	display: flex;
+	justify-content: center;
 	top: -20%;
 	right: 26.2%;
 	width:20vw;
@@ -31,7 +38,8 @@ height: 40vh;
 #bilde3 {
 	z-index: 3;
 	position: absolute;
-	/*justify-content: center;*/
+	display: flex;
+	justify-content: center;
 	top: 5%;
 	right: 42%;
 	width:60vw;
