--- a/css/Startside.css
+++ b/css/Startside.css
@@ -2,10 +2,14 @@ body{
     overflow:hidden
 }
 
-.frame {background-color: black;
+.legoFrame {background-color: black;
 width: 100vw;
 height: 100vh;
-display: none;}
+display: block;}
+
+.normalFrame{
+    display: none;
+}
 
 
 
