--- a/css/Startside.css
+++ b/css/Startside.css
@@ -5,10 +5,10 @@ body{
 .legoFrame {background-color: black;
 width: 100vw;
 height: 100vh;
-display: block;}
+display: none;}
 
 .normalFrame{
-    display: none;
+    display: block;
 }
 
 
