--- a/css/Globe.css
+++ b/css/Globe.css
@@ -46,7 +46,7 @@ body{
     }
 }
 /*-----------------------------------------------------------------*/
-
+/*Moon ------------------------------------------------------------*/
 .moon img{
     position: absolute;
     z-index: 3;
@@ -102,6 +102,14 @@ body{
     border-radius: 20%;
 }
 
+#reindeer{
+    position: absolute;
+    z-index: 2;
+    bottom: 70%;
+    left: 20%;
+    width: 20vw;
+} 
+
     /*Santa -----------------------------------------------------------*/
         #santa-legs{
             position: relative;
@@ -134,14 +142,6 @@ body{
         }
     /*-----------------------------------------------------------------*/
 
-    #reindeer{
-        position: absolute;
-        z-index: 2;
-        top: 200px;
-        left: 0px;
-        width: 50%;
-        height: 50%;
-    } 
 /*-----------------------------------------------------------------*/
 
 /*Always has been meme*/
