--- a/css/LEGO-City.css
+++ b/css/LEGO-City.css
@@ -9,13 +9,17 @@ body{
 	width: 100vw;
 }
 #nightsky{
-	position: relative;
+	position: absolute;
+	height: 100vh;
+	width: 100vw;
 }
 
-#by{
-	position: relative;
+#city{
+	position: absolute;
+	height: 100vh;
+	width: 100vw;
 }
-#bilde {
+#road {
 z-index: 3;
 position: absolute;
 display: flex;
@@ -25,7 +29,7 @@ left: -20%;
 width:150vw;
 height: 40vh;
 }
-#bilde2 {
+#house1 {
 	z-index: 4;
 	position: absolute;
 	display: flex;
@@ -35,7 +39,29 @@ height: 40vh;
 	width:20vw;
 	height: 85vh;
 	}
-#bilde3 {
+
+#house2 {
+	z-index: 4;
+	position: absolute;
+	display: flex;
+	justify-content: center;
+	top: -20%;
+	right: 7.5%;
+	width:20vw;
+	height: 85vh;
+	}
+
+#house3 {
+	z-index: 4;
+	position: absolute;
+	display: flex;
+	justify-content: center;
+	top: -20%;
+	right: -11%;
+	width:20vw;
+	height: 85vh;
+	}
+#house4 {
 	z-index: 3;
 	position: absolute;
 	display: flex;
@@ -45,4 +71,6 @@ height: 40vh;
 	width:60vw;
 	height: 60vh;
 	}
+
+
 
