--- a/css/North-Pole.css
+++ b/css/North-Pole.css
@@ -356,3 +356,8 @@
         transform:rotate(-90deg);
         opacity: 0;}
 }
+/*
+@media screen and (max-width: 1000px) {
+    #cottage{width:100vw}
+
+}
