--- a/CSS/Felles.css
+++ b/CSS/Felles.css
@@ -21,6 +21,7 @@ body{
     z-index: 0; 
     background: black  
     url(../Images/Wallpaper/stars1.png) repeat top center; 
+    z-index: 1;
 }
 
 .shimmer{ /* Controls star flickering */ 
@@ -30,6 +31,7 @@ body{
     animation: shinyAnim linear infinite; 
     background-position: center; 
     animation-duration: 200s; 
+    z-index: 2;
 }
 
 @keyframes shinyAnim{ 
