--- a/css/Globe.css
+++ b/css/Globe.css
@@ -19,14 +19,14 @@ body{
     position: relative;
     justify-content: center;
     z-index: 3; 
-    width: 600px; 
-    height: 600px;
+    width: 35%; 
+    height: 70%;
     background-image: url(/images/Globe/worldmap2.png);
-    background-size: 800px;
+    background-size: 130%;
     background-position: bottom;
     border-radius: 100%;
     top: 5%;
-    left: 35%;
+    left: 33%;
     box-shadow: inset 10px 0 50px black, 0 0 500px; 
     animation: earth 100s linear infinite;
 }
@@ -50,8 +50,8 @@ body{
 .moon img{
     position: absolute;
     z-index: 3;
-    width: 200px;
-    right: 5px;
+    width: 10%;
+    right: 1%;
     top: 0;
     animation: moonBob 2s linear infinite;
 }
@@ -70,10 +70,10 @@ body{
     justify-content: center;
     z-index: 3;
     background-color: darkred;
-    width: 600px;
-    height: 400px;
+    width: 32%;
+    height: 30%;
     left: 35%;
-    top: 130px;
+    top: 10%;
     border-radius: 20%;
 }
 
@@ -82,10 +82,10 @@ body{
     justify-content: center;
     z-index: 2;
     background-color: #101010;
-    width: 580px;
-    height: 300px;
-    left: 10px;
-    top: 10px;
+    width: 97.3%;
+    height: 100%;
+    left: 1.5%;
+    top: 5%;
     border-radius: 20%;
 }
 
@@ -95,17 +95,17 @@ body{
     display: flex;
     z-index: 3;
     background-color: #442e19;
-    width: 560px;
-    height: 300px;
-    left: 20px;
-    top: 15px;
+    width: 93.7%;
+    height: 100%;
+    left: 3.3%;
+    top: 10%;
     border-radius: 20%;
 }
 
 #reindeer{
     position: absolute;
-    z-index: 2;
-    bottom: 70%;
+    z-index: 0;
+    bottom: 60%;
     left: 20%;
     width: 20vw;
 } 
@@ -115,15 +115,11 @@ body{
             position: relative;
             justify-content: center;
             z-index: 4; 
-            right: 30px;
-            bottom: 60px;
+            left: 2%;
+            bottom: 40%;
+            width: 100%;
+            height: 200%;
             transform: rotate(180deg);
-        }
-
-        #santa-legs img{
-            justify-content: center;
-            width: 500px;
-            height: 500px; 
         }
 
         #santa-arms{
@@ -131,15 +127,12 @@ body{
             justify-content: center;
             z-index: 4;
             transform: rotate(180deg);
-            left: 10px;
-            bottom: 600px;
+            left: 0%;
+            bottom: 210%;
+            width: 100%;
+            height: 150%;
         }
 
-        #santa-arms img{
-            justify-content: center;
-            width: 600px;
-            height: 600px;
-        }
     /*-----------------------------------------------------------------*/
 
 /*-----------------------------------------------------------------*/
