--- a/css/Globe.css
+++ b/css/Globe.css
@@ -46,6 +46,7 @@ body{
     }
 }
 /*-----------------------------------------------------------------*/
+
 /*Moon ------------------------------------------------------------*/
 .moon img{
     position: absolute;
@@ -62,6 +63,8 @@ body{
     100% {top: 0;}
     
 }
+/*-----------------------------------------------------------------*/
+
 
 /*Santa's Sleigh --------------------------------------------------*/
 
@@ -137,4 +140,29 @@ body{
 
 /*-----------------------------------------------------------------*/
 
-/*Always has been meme*/
+/*Always has been -----------------------------------------------------*/
+
+#always-has-been-gun{
+    position: absolute;
+    z-index: 50;
+    width: 20vh;
+    top: 50%;
+    right: 5%;
+    transform: rotate(20deg);
+    opacity: 0;
+    
+    
+}
+
+#always-has-been-gun:hover{
+    animation: alwaysHasBeenGun 2s linear infinite;
+    opacity: 1;
+    
+}
+@keyframes alwaysHasBeenGun {
+    0% {top: 50;}
+    50%{ top: 51%;}
+    100% {top: 50;}
+}
+
+/*---------------------------------------------------------------------*/
