--- a/css/LEGO-City.css
+++ b/css/LEGO-City.css
@@ -86,9 +86,17 @@ height: 40vh;
 
 @keyframes woman {
 	0% {top: 12.5;  transform: rotate(-5deg);}
-    50%{ top: 12.6%,; transform: rotate(5deg);}
+    50%{ top: 13%; transform: rotate(5deg);}
     100% {top: 12.5;  transform: rotate(-5deg);}
     
+}
+
+#lightHalo1, #lightHalo2, #lightHalo3, #lightHalo4 {
+	z-index: 6;
+	position: absolute;
+	opacity: 20%;
+	width: 10vw;
+	height: 20vh;
 }
 
 
