--- a/css/Lego-Land.css
+++ b/css/Lego-Land.css
@@ -26,10 +26,11 @@ body{
     left: 0;
     z-index: 1;
     display: flex;
+    flex-direction: row;
 }
 
 .snow{
-    width: 20%;
+    height:40vh;
 }
 
 /*Stylig for stair*/
@@ -56,6 +57,7 @@ body{
     display: flex;
     justify-content: center;
     top: 20%;
+    border: 3px solid black;
 }
 
 .castleTriangle{
@@ -63,8 +65,8 @@ body{
     top: 11%;
     left: 35.5%;
     z-index: 2;
-    width: 30%;
-    height: 10%;
+    width: 30vw;
+    height: 10vh;
 }
 
 .castle{
@@ -79,7 +81,10 @@ body{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    width: 61%;
+    width: 60vw;
+    height: 10vw;
+    border: 3px solid red;
+    z-index: 999;
 }
 
 .windowContainer{
@@ -93,7 +98,7 @@ body{
 .window{
     z-index: 3;
     height: 9vh;
-    padding: .5%;
+    padding: .4%;
 }
 
 /*Styling for castle door*/
@@ -106,7 +111,7 @@ body{
 }
 
 .door{
-    height: 30vh;
+    height: 25vh;
 }
 
 #door2{
@@ -143,6 +148,16 @@ body{
     right: -4%;
     bottom: 0;
 }
+
+#tree5{
+    width: 40%;
+    height: 70%;
+    left: -11%;
+    bottom: 20%;
+}
+
+
+
 
 /*Styling for clouds*/
 .cloud{
@@ -220,5 +235,68 @@ body{
 
     100%{
         right: 35%;
+    }
+}
+
+.presentContainer{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    border: 3px solid green;
+}
+
+.present{
+    position: absolute;
+    z-index: 99;
+}
+
+#present1{
+    left: 10%;
+    top: 50%;
+    opacity: 0;
+    animation-name: present1Animation;
+    animation-play-state: paused;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease-in;   
+}
+#present2{
+    left: 3%;
+    top: 60%;
+}
+#present3{
+    left: 8%;
+    top: 64%;
+}
+
+.presentShowBtn{
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    background-color: magenta;
+    z-index: 99;
+    cursor: pointer;
+}
+
+/*Animation for present hover: Presents showing*/
+.presentShowBtn:hover + #present1{
+    animation-play-state: running   ;
+}
+
+@keyframes present1Animation{
+    
+    20%{
+        opacity: 1;
+    }
+    50%{
+        left: 10%;
+        top: 45%;
+        opacity: 1;
+    }
+    100%{
+        left: 11%;
+        top: 51;
+        opacity: 1;
     }
 }
