--- a/css/North-Pole.css
+++ b/css/North-Pole.css
@@ -1,5 +1,5 @@
 #container {
-    background-color: black;
+    background-color: rgb(10, 0, 100);
     z-index: 1;
     height: 100vh;
     width: 100vw;
@@ -309,12 +309,14 @@
     z-index: 5;
     animation-duration: 10s;
     animation-timing-function: linear;
-    animation-delay: 0s;
+    animation-delay: 1s;
     animation-iteration-count: infinite;
+    
 }
 
 #flake1{
     animation-name: snowflake1;
+    animation-delay:0s;
 }
 
 #flake2{
@@ -327,6 +329,290 @@
     animation-delay:0.5s;
 }
 
+#flake4{
+    animation-name: snowflake4;
+    animation-delay: 1s;
+}
+
+#flake5{
+    animation-name: snowflake5;
+    animation-delay: 0s;
+}
+
+#flake6{
+    animation-name: snowflake6;
+    animation-delay: 2s;
+}
+
+#flake7{
+    animation-name: snowflake7;
+    animation-delay: 0s;
+}
+
+#flake8{
+    animation-name: snowflake8;
+    animation-delay: 1s;
+}
+
+#flake9{
+    animation-name: snowflake9;
+    animation-delay: 0.5s;
+}
+
+#flake10{
+    animation-name: snowflake10;
+    animation-delay: 1s;
+}
+
+#flake11{
+    animation-name: snowflake11;
+    animation-delay: 0s;
+}
+
+#flake12{
+    animation-name: snowflake12;
+    animation-delay: 2s;
+}
+
+#flake13{
+    animation-name: snowflake13;
+    animation-delay: 0s;
+}
+
+#flake14{
+    animation-name: snowflake14;
+    animation-delay: 1s;
+}
+
+#flake15{
+    animation-name: snowflake15;
+    animation-delay: 0s;
+}
+
+#flake16{
+    animation-name: snowflake16;
+    animation-delay: 2s;
+}
+
+#flake17{
+    animation-name: snowflake17;
+    animation-delay: 0.5s;
+}
+
+#flake18{
+    animation-name: snowflake18;
+    animation-delay: 1s;
+}
+
+#flake19{
+    animation-name: snowflake19;
+    animation-delay: 0s;
+}
+
+#flake20{
+    animation-name: snowflake20;
+    animation-delay: 2s;
+}
+
+#flake21{
+    animation-name: snowflake1;
+    animation-delay: 3s;
+}
+
+#flake22{
+    animation-name: snowflake2;
+    animation-delay: 3s;
+}
+
+#flake23{
+    animation-name: snowflake3;
+    animation-delay: 4s;
+}
+
+#flake24{
+    animation-name: snowflake4;
+    animation-delay: 3.5s;
+}
+
+#flake25{
+    animation-name: snowflake5;
+    animation-delay: 4s;
+}
+
+#flake26{
+    animation-name: snowflake6;
+    animation-delay: 4.5s;
+}
+
+#flake27{
+    animation-name: snowflake7;
+    animation-delay: 3.5s;
+}
+
+#flake28{
+    animation-name: snowflake8;
+    animation-delay: 3s;
+}
+
+#flake29{
+    animation-name: snowflake9;
+    animation-delay: 4s;
+}
+
+#flake30{
+    animation-name: snowflake10;
+    animation-delay: 3.5s;
+}
+
+#flake31{
+    animation-name: snowflake11;
+    animation-delay: 4s;
+}
+
+#flake32{
+    animation-name: snowflake12;
+    animation-delay: 4.5s;
+}
+
+#flake33{
+    animation-name: snowflake13;
+    animation-delay: 3.5s;
+}
+
+#flake34{
+    animation-name: snowflake14;
+    animation-delay: 4s;
+}
+
+#flake35{
+    animation-name: snowflake15;
+    animation-delay: 3.5s;
+}
+
+#flake36{
+    animation-name: snowflake16;
+    animation-delay: 4.5s;
+}
+
+#flake37{
+    animation-name: snowflake17;
+    animation-delay: 3s;
+}
+
+#flake38{
+    animation-name: snowflake18;
+    animation-delay: 3.5s;
+}
+
+#flake39{
+    animation-name: snowflake19;
+    animation-delay: 4s;
+}
+
+#flake40{
+    animation-name: snowflake20;
+    animation-delay: 3.5s;
+}
+
+#flake41{
+    animation-name: snowflake1;
+    animation-delay: 5.5s;
+}
+
+#flake42{
+    animation-name: snowflake2;
+    animation-delay: 6s;
+}
+
+#flake43{
+    animation-name: snowflake3;
+    animation-delay: 6.5s;
+}
+
+#flake44{
+    animation-name: snowflake4;
+    animation-delay: 6s;
+}
+
+#flake45{
+    animation-name: snowflake5;
+    animation-delay: 5.5s;
+}
+
+#flake46{
+    animation-name: snowflake6;
+    animation-delay: 6s;
+}
+
+#flake47{
+    animation-name: snowflake7;
+    animation-delay: 6.5s;
+}
+
+#flake48{
+    animation-name: snowflake8;
+    animation-delay: 6s;
+}
+
+#flake49{
+    animation-name: snowflake9;
+    animation-delay: 5.5s;
+}
+
+#flake50{
+    animation-name: snowflake10;
+    animation-delay: 6.5s;
+}
+
+#flake51{
+    animation-name: snowflake11;
+    animation-delay: 7s;
+}
+
+#flake52{
+    animation-name: snowflake12;
+    animation-delay: 6.5s;
+}
+
+#flake53{
+    animation-name: snowflake13;
+    animation-delay: 7s;
+}
+
+#flake54{
+    animation-name: snowflake14;
+    animation-delay: 7.5s;
+}
+
+#flake55{
+    animation-name: snowflake15;
+    animation-delay: 6.5s;
+}
+
+#flake56{
+    animation-name: snowflake16;
+    animation-delay: 6s;
+}
+
+#flake57{
+    animation-name: snowflake17;
+    animation-delay: 6.5s;
+}
+
+#flake58{
+    animation-name: snowflake18;
+    animation-delay: 7s;
+}
+
+#flake59{
+    animation-name: snowflake19;
+    animation-delay: 6.5s;
+}
+
+#flake60{
+    animation-name: snowflake20;
+    animation-delay: 6s;
+}
 @keyframes snowflake1{
     0%{left: 5%;
         top: 20%;}
@@ -354,5 +640,175 @@
     100%{left: 15%;
         top: 68%;
         transform:rotate(-90deg);
+        opacity: 0;}
+}
+
+@keyframes snowflake4{
+    0%{left: 20%;
+        top: 24%;}
+    90%{opacity: 1;}    
+    100%{left: 20%;
+        top: 74%;
+        transform:rotate(70deg);
+        opacity: 0;}
+}
+
+@keyframes snowflake5{
+    0%{left: 25%;
+        top: 20%;}
+    90%{opacity: 1;}    
+    100%{left: 25%;
+        top: 70%;
+        transform:rotate(-80deg);
+        opacity: 0;}
+}
+
+@keyframes snowflake6{
+    0%{left: 28%;
+        top: 20%;}
+    90%{opacity: 1;}    
+    100%{left: 28%;
+        top: 70%;
+        transform:rotate(-80deg);
+        opacity: 0;}
+}
+
+@keyframes snowflake7{
+    0%{left: 33%;
+        top: 20%;}
+    90%{opacity: 1;}    
+    100%{left: 33%;
+        top: 70%;
+        transform:rotate(-80deg);
+        opacity: 0;}
+}
+
+@keyframes snowflake8{
+    0%{left: 37%;
+        top: 20%;}
+    90%{opacity: 1;}    
+    100%{left: 41%;
+        top: 70%;
+        transform:rotate(-80deg);
+        opacity: 0;}
+}
+
+@keyframes snowflake9{
+    0%{left: 43%;
+        top: 20%;}
+    90%{opacity: 1;}    
+    100%{left: 45%;
+        top: 70%;
+        transform:rotate(-80deg);
+        opacity: 0;}
+}
+
+@keyframes snowflake10{
+    0%{left: 51%;
+        top: 17%;}
+    90%{opacity: 1;}    
+    100%{left: 51%;
+        top: 67%;
+        transform:rotate(-80deg);
+        opacity: 0;}
+}
+
+@keyframes snowflake11{
+    0%{left: 56%;
+        top: 17%;}
+    90%{opacity: 1;}    
+    100%{left: 56%;
+        top: 67%;
+        transform:rotate(-80deg);
+        opacity: 0;}
+}
+
+@keyframes snowflake12{
+    0%{left: 60%;
+        top: 17%;}
+    90%{opacity: 1;}    
+    100%{left: 60%;
+        top: 67%;
+        transform:rotate(-80deg);
+        opacity: 0;}
+}
+
+@keyframes snowflake13{
+    0%{left: 64%;
+        top: 17%;}
+    90%{opacity: 1;}    
+    100%{left: 64%;
+        top: 67%;
+        transform:rotate(-80deg);
+        opacity: 0;}
+}
+
+@keyframes snowflake14{
+    0%{left: 69%;
+        top: 17%;}
+    90%{opacity: 1;}    
+    100%{left: 69%;
+        top: 67%;
+        transform:rotate(-80deg);
+        opacity: 0;}
+}
+
+@keyframes snowflake15{
+    0%{left:72%;
+        top: 17%;}
+    90%{opacity: 1;}    
+    100%{left: 74%;
+        top: 67%;
+        transform:rotate(-80deg);
+        opacity: 0;}
+}
+
+@keyframes snowflake16{
+    0%{left: 74%;
+        top: 17%;}
+    90%{opacity: 1;}    
+    100%{left: 77%;
+        top: 67%;
+        transform:rotate(-80deg);
+        opacity: 0;}
+}
+
+@keyframes snowflake17{
+    0%{left: 75%;
+        top: 20%;}
+    90%{opacity: 1;}    
+    100%{left: 75%;
+        top: 70%;
+        transform:rotate(-80deg);
+        opacity: 0;}
+}
+
+@keyframes snowflake18{
+    0%{left: 79%;
+        top: 17%;}
+    90%{opacity: 1;}    
+    100%{left: 81%;
+        top: 67%;
+        transform:rotate(-80deg);
+        opacity: 0;}
+}
+
+@keyframes snowflake19{
+    0%{left: 84%;
+        top: 22%;}
+    90%{opacity: 1;}    
+    100%{left: 84%;
+        top: 72%;
+        transform:rotate(-80deg);
+        opacity: 0;}
+}
+
+@keyframes snowflake20{
+    0%{left: 88%;
+        top: 17%;}
+    90%{opacity: 1;}    
+    100%{left: 89%;
+        top: 67%;
+        transform:rotate(-80deg);
         opacity: 0;}
 }
