--- a/css/Globe.css
+++ b/css/Globe.css
@@ -161,7 +161,7 @@ body{
 }
 @keyframes alwaysHasBeenGun {
     0% {top: 50;}
-    50%{ top: 52%;}
+    50%{ top: 52%;  transform: rotate(-5deg);} 
     100% {top: 50;}
 }
 
@@ -177,7 +177,7 @@ body{
 
 @keyframes alwaysHasBeenVictim {
     100% {top: 50;}
-    50%{ top: 54%;}
+    50%{ top: 54%; transform: rotate(35deg);}
     0% {top: 50;}
 }
 
