--- a/css/Globe.css
+++ b/css/Globe.css
@@ -175,6 +175,16 @@ body{
     animation: alwaysHasBeenVictim 4s linear infinite;
 }
 
+#talkingbubble-1{
+    position: absolute;
+    z-index: 5;
+    color: white;
+    width: 10vh;
+    top: 50%;
+    right: 14%;
+    transform: rotate(0deg);
+}
+
 @keyframes alwaysHasBeenVictim {
     100% {top: 50;}
     50%{ top: 54%; transform: rotate(35deg);}
