--- a/css/Lego-Land.css
+++ b/css/Lego-Land.css
@@ -57,7 +57,6 @@ body{
     display: flex;
     justify-content: center;
     top: 20%;
-    border: 3px solid black;
 }
 
 .castleTriangle{
@@ -83,8 +82,7 @@ body{
     flex-wrap: wrap;
     width: 60vw;
     height: 10vw;
-    border: 3px solid red;
-    z-index: 999;
+    z-index: 3;
 }
 
 .windowContainer{
@@ -125,31 +123,31 @@ body{
 }
 
 #tree1{
-    height: 50vh;
-    left: 3%;
-    bottom: -3%;
+    height: 40vh;
+    left: 6%;
+    bottom: -1%;
 }
 
 #tree2{
-    height: 50vh;
+    height: 45vh;
     left: -7%;
     bottom: 5%;
 }
 
 #tree3{
-    height: 53vh;
+    height: 45vh;
     right: 2%;
     bottom: 15%;
 }
 
 #tree4{
-    height: 50vh;
-    right: -4%;
-    bottom: 0;
+    height: 35vh;
+    right: -1%;
+    bottom: 2%;
 }
 
 #tree5{
-    height: 50vh;
+    height: 40vh;
     left: -1%;
     bottom: 20%;
 }
@@ -236,68 +234,90 @@ body{
     }
 }
 
-.presentContainer{
-    position: relative;
-    height: 100vh;
-    width: 100vw;
-    border: 3px solid green;
-}
 
 .present{
     position: absolute;
+    height: 10vh;
     z-index: 99;
-}
-
-#present1{
-
-    opacity: 0;
-    animation-name: present1Animation;
     animation-play-state: paused;
     animation-duration: 1s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
-    animation-timing-function: ease-in;   
+    animation-timing-function:ease-in-out; 
+}
+
+#present1{
+    opacity: 0;
+    animation-name: present1Animation;
 }
 #present2{
-    left: 3%;
-    top: 60%;
+    opacity: 0;
+    animation-name: present2Animation;
 }
 #present3{
-    left: 8%;
-    top: 64%;
+    opacity: 0;
+    animation-name: present3Animation;
 }
 
 .presentShowBtn{
     position: absolute;
-    width: 100px;
-    height: 100px;
-    background-color: magenta;
+    height: 10vh;
+    width: 10vw;
+    background-color: rgba(236, 236, 236);
     z-index: 99;
-    cursor: pointer;
+    cursor: pointer;    
 }
 
 /*Animation for present hover: Presents showing*/
 .presentShowBtn:hover > #present1{ 
-
-    animation-play-state: running   ;
+    animation-play-state: running;
+}
+.presentShowBtn:hover > #present2{ 
+    animation-play-state: running;
+}
+.presentShowBtn:hover > #present3{ 
+    animation-play-state: running;
 }
 
 @keyframes present1Animation{
     0%{
-        right: 600%;
-        top: 600%;
+        left: -350%;
+        top: 800%;
     }
     20%{
         opacity: 1;
     }
-    50%{
-        right: 620%;
-        top: 630%;
+    100%{
+        opacity: 1;
+        left: -390%;
+        top: 850%;
+    }
+}
+@keyframes present2Animation{
+    0%{
+        left: 390%;
+        top: 740%;
+    }
+    20%{
         opacity: 1;
     }
     100%{
-        right: 610%;
-        top: 620%;
         opacity: 1;
+        left: 350%;
+        top: 800%;
+    }
+}
+@keyframes present3Animation{
+    0%{
+        left: 410%;
+        top: 740%;
+    }
+    20%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 1;
+        left: 380%;
+        top: 800%;
     }
 }
