--- a/css/Startside.css
+++ b/css/Startside.css
@@ -87,6 +87,14 @@ body{
         z-index: 5;
     }
 
+    
+            /*Animations*/
+            /*-------------------------------------------*/
+                #present:hover{
+                    height: 8vh;
+                }
+            /*-------------------------------------------*/
+
 /*-------------------------------------------*/
 
 /*Forest*/
