--- a/css/Globe.css
+++ b/css/Globe.css
@@ -1,8 +1,10 @@
+/*Body ------------------------------------------------------------*/
 body{
     overflow: hidden;
 }
+/*-----------------------------------------------------------------*/
 
-/*Worldmap -------------------------------------------------------*/
+/*The World -------------------------------------------------------*/
 #earth-section{
     position: absolute;
     justify-content: center;
@@ -63,6 +65,7 @@ body{
     100% {top: 0;}  
 }
 /*-----------------------------------------------------------------*/
+
 /*Rocket ----------------------------------------------------------*/
 #spaceshuttle>*{
     position: absolute;
@@ -70,7 +73,7 @@ body{
 
 #lego-rocket{
     z-index: 4;
-    width: 10vh;
+    width: 7vw;
     top: 30%;
     left: 60%;
     animation: rocketMove 5s linear forwards;
@@ -82,9 +85,78 @@ body{
     50% {top: 30%; left: 80%; }
     100% {top: 10%; left: 100%;}
 }
-
 /*-----------------------------------------------------------------*/
-/*Santa's Sleigh --------------------------------------------------*/
+
+/*Spacemen --------------------------------------------------------*/
+
+#always-has-been-gun{
+    position: absolute;
+    z-index: 5;
+    width: 20vh;
+    top: 50%;
+    right: 5%;
+    transform: rotate(20deg);
+    animation: alwaysHasBeenGun 3s linear infinite;   
+}
+
+@keyframes alwaysHasBeenGun {
+    0% {top: 50;}
+    50%{ top: 52%;  transform: rotate(-5deg);} 
+    100% {top: 50;}
+}
+
+#always-has-been-victim{
+    position: absolute;
+    z-index: 5;
+    width: 5vh;
+    top: 50%;
+    right: 14%;
+    transform: rotate(20deg);
+    animation: alwaysHasBeenVictim 4s linear infinite;
+}
+
+@keyframes alwaysHasBeenVictim {
+    100% {top: 50;}
+    50%{ top: 54%; transform: rotate(35deg);}
+    0% {top: 50;}
+}
+/*---------------------------------------------------------------------*/
+
+/*Extraterrestrial ----------------------------------------------------*/
+#extraterrestrial-section>*{
+    position: absolute;
+}
+
+#lego-ufo{
+    z-index: 4;
+    width: 10vw;
+    top: 40%;
+    left: 10%;
+    opacity: 0.1;
+    transform: rotate(-15deg);
+    animation: ufoBobbing 6s linear infinite;
+    
+}
+
+#lego-ufo:hover{
+    animation: ufoVisibility 1s linear forwards;
+}
+
+@keyframes ufoBobbing {
+    0% {top: 40%;}
+    50% {top: 44%;}
+    100% {top: 40%;}
+}
+
+@keyframes ufoVisibility{
+    0% {opacity: 0.1;}
+    50% {opacity: 0.5;}
+    100% {opacity: 1;}
+}
+
+/*---------------------------------------------------------------------*/
+
+/*Santa's Sleigh ------------------------------------------------------*/
 
 #santa-sleigh{
     position: relative;
@@ -153,60 +225,7 @@ body{
             width: 100%;
             height: 150%;
         }
-
     /*-----------------------------------------------------------------*/
 
-/*-----------------------------------------------------------------*/
-
-/*Always has been -----------------------------------------------------*/
-
-#always-has-been-gun{
-    position: absolute;
-    z-index: 5;
-    width: 20vh;
-    top: 50%;
-    right: 5%;
-    transform: rotate(20deg);
-    opacity: 0;
-    animation: alwaysHasBeenGun 3s linear infinite;
-    
-}
-
-#always-has-been-gun:hover{
-    
-    opacity: 1;
-    
-}
-@keyframes alwaysHasBeenGun {
-    0% {top: 50;}
-    50%{ top: 52%;  transform: rotate(-5deg);} 
-    100% {top: 50;}
-}
-
-#always-has-been-victim{
-    position: absolute;
-    z-index: 5;
-    width: 5vh;
-    top: 50%;
-    right: 14%;
-    transform: rotate(20deg);
-    animation: alwaysHasBeenVictim 4s linear infinite;
-}
-
-#talkingbubble-1{
-    position: absolute;
-    z-index: 5;
-    color: white;
-    width: 10vh;
-    top: 50%;
-    right: 14%;
-    transform: rotate(0deg);
-}
-
-@keyframes alwaysHasBeenVictim {
-    100% {top: 50;}
-    50%{ top: 54%; transform: rotate(35deg);}
-    0% {top: 50;}
-}
-
 /*---------------------------------------------------------------------*/
+
