--- a/css/Globe.css
+++ b/css/Globe.css
@@ -154,6 +154,31 @@ body{
     100% {opacity: 1;}
 }
 
+#lego-alien{
+    z-index: 4;
+    width: 5vh;
+    top: 45%;
+    left: 22%;
+    transform: rotate(5deg);
+    opacity: 0.1;
+    animation: alienBob 3s linear infinite;   
+}
+#lego-alien:hover{
+    animation: alienVisibility 1s linear forwards;
+}
+
+@keyframes alienBob {
+    0% {top: 45%;}
+    50% {top: 47%;}
+    100% {top: 45%;}
+}
+
+@keyframes alienVisibility{
+    0% {opacity: 0.1;}
+    50% {opacity: 0.5;}
+    100% {opacity: 1;}
+}
+
 /*---------------------------------------------------------------------*/
 
 /*Santa's Sleigh ------------------------------------------------------*/
@@ -204,27 +229,27 @@ body{
 } 
 
     /*Santa -----------------------------------------------------------*/
-        #santa-legs{
-            position: relative;
-            justify-content: center;
-            z-index: 4; 
-            left: 2%;
-            bottom: 40%;
-            width: 100%;
-            height: 200%;
-            transform: rotate(180deg);
-        }
+    #santa-legs{
+    position: relative;
+    justify-content: center;
+    z-index: 4; 
+    left: 2%;
+    bottom: 40%;
+    width: 100%;
+    height: 200%;
+    transform: rotate(180deg);
+    }
 
-        #santa-arms{
-            position: relative;
-            justify-content: center;
-            z-index: 4;
-            transform: rotate(180deg);
-            left: 0%;
-            bottom: 210%;
-            width: 100%;
-            height: 150%;
-        }
+    #santa-arms{
+    position: relative;
+    justify-content: center;
+    z-index: 4;
+    transform: rotate(180deg);
+    left: 0%;
+    bottom: 210%;
+    width: 100%;
+    height: 150%;
+    }
     /*-----------------------------------------------------------------*/
 
 /*---------------------------------------------------------------------*/
